--- a/archives.html
+++ b/archives.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Cooking and Code: simple, healthy, easy, delicious recipes curated by me, Lucy Wyman">
+<meta name="description" content="A humble blog by me, Lucy Wyman">
 <meta name="keywords" content="blog, code, lucy, wyman">
 <meta name="robots" content="index, follow">
 <meta property="og:locale" content="en_US" />
@@ -33,16 +33,16 @@ ga('send', 'pageview');
 				<li><a href='http://blog.lucywyman.me/about.html'>About</a></li>
 				<li><a href='http://blog.lucywyman.me/categories.html'>Categories &#8964;</a>
 				<ul>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7fd49f2a2890>,-<pelican.contents.Article-object-at-0x7fd49f22e6d0>,-<pelican.contents.Article-object-at-0x7fd49f77db10>,-<pelican.contents.Article-object-at-0x7fd49f1eda10>,-<pelican.contents.Article-object-at-0x7fd49f2822d0>,-<pelican.contents.Article-object-at-0x7fd49f10bf50>]).html'>
-							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7fd49f2a2890>, <pelican.contents.Article object at 0x7fd49f22e6d0>, <pelican.contents.Article object at 0x7fd49f77db10>, <pelican.contents.Article object at 0x7fd49f1eda10>, <pelican.contents.Article object at 0x7fd49f2822d0>, <pelican.contents.Article object at 0x7fd49f10bf50>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f9f84297890>,-<pelican.contents.Article-object-at-0x7f9f84277a50>,-<pelican.contents.Article-object-at-0x7f9f84771b10>,-<pelican.contents.Article-object-at-0x7f9f841e2590>,-<pelican.contents.Article-object-at-0x7f9f841e2a10>,-<pelican.contents.Article-object-at-0x7f9f84195510>]).html'>
+							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f9f84297890>, <pelican.contents.Article object at 0x7f9f84277a50>, <pelican.contents.Article object at 0x7f9f84771b10>, <pelican.contents.Article object at 0x7f9f841e2590>, <pelican.contents.Article object at 0x7f9f841e2a10>, <pelican.contents.Article object at 0x7f9f84195510>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7fd49f0b5ad0>,-<pelican.contents.Article-object-at-0x7fd49f1ed590>,-<pelican.contents.Article-object-at-0x7fd49f0b5a90>,-<pelican.contents.Article-object-at-0x7fd49f282110>,-<pelican.contents.Article-object-at-0x7fd49f3961d0>,-<pelican.contents.Article-object-at-0x7fd49f235ed0>]).html'>
-							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7fd49f0b5ad0>, <pelican.contents.Article object at 0x7fd49f1ed590>, <pelican.contents.Article object at 0x7fd49f0b5a90>, <pelican.contents.Article object at 0x7fd49f282110>, <pelican.contents.Article object at 0x7fd49f3961d0>, <pelican.contents.Article object at 0x7fd49f235ed0>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f9f84102250>,-<pelican.contents.Article-object-at-0x7f9f840da8d0>,-<pelican.contents.Article-object-at-0x7f9f84122a50>,-<pelican.contents.Article-object-at-0x7f9f8438b1d0>,-<pelican.contents.Article-object-at-0x7f9f8422aed0>]).html'>
+							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f9f84102250>, <pelican.contents.Article object at 0x7f9f840da8d0>, <pelican.contents.Article object at 0x7f9f84122a50>, <pelican.contents.Article object at 0x7f9f8438b1d0>, <pelican.contents.Article object at 0x7f9f8422aed0>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7fd49f02b6d0>,-<pelican.contents.Article-object-at-0x7fd49f1c53d0>,-<pelican.contents.Article-object-at-0x7fd49f235a50>,-<pelican.contents.Article-object-at-0x7fd49f0b55d0>]).html'>
-							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7fd49f02b6d0>, <pelican.contents.Article object at 0x7fd49f1c53d0>, <pelican.contents.Article object at 0x7fd49f235a50>, <pelican.contents.Article object at 0x7fd49f0b55d0>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7f9f840daf90>,-<pelican.contents.Article-object-at-0x7f9f84122b90>,-<pelican.contents.Article-object-at-0x7f9f8422aa50>,-<pelican.contents.Article-object-at-0x7f9f840aa9d0>]).html'>
+							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7f9f840daf90>, <pelican.contents.Article object at 0x7f9f84122b90>, <pelican.contents.Article object at 0x7f9f8422aa50>, <pelican.contents.Article object at 0x7f9f840aa9d0>])
 						</a>
 					</li>
 				</ul>
@@ -56,8 +56,6 @@ ga('send', 'pageview');
     <dd><a href="http://blog.lucywyman.me/me-earl-dying-girl.html">Book Review: Me and Earl and the Dying Girl</a></dd>
     <dt>05.3.2016</dt>
     <dd><a href="http://blog.lucywyman.me/ptown-may-2016.html">Portland Trip: May 2016</a></dd>
-    <dt>04.25.2016</dt>
-    <dd><a href="http://blog.lucywyman.me/how-body-pump-taught-me-to-make-mistakes.html">How Body Pump Taught Me To Make Mistakes</a></dd>
     <dt>04.21.2016</dt>
     <dd><a href="http://blog.lucywyman.me/podcasts.html">Podcasts I Love</a></dd>
     <dt>04.17.2016</dt>
