--- a/archives.html
+++ b/archives.html
@@ -33,16 +33,20 @@ ga('send', 'pageview');
 				<li><a href='http://blog.lucywyman.me/about.html'>About</a></li>
 				<li><a href='http://blog.lucywyman.me/categories.html'>Categories &#8964;</a>
 				<ul>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f9f84297890>,-<pelican.contents.Article-object-at-0x7f9f84277a50>,-<pelican.contents.Article-object-at-0x7f9f84771b10>,-<pelican.contents.Article-object-at-0x7f9f841e2590>,-<pelican.contents.Article-object-at-0x7f9f841e2a10>,-<pelican.contents.Article-object-at-0x7f9f84195510>]).html'>
-							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f9f84297890>, <pelican.contents.Article object at 0x7f9f84277a50>, <pelican.contents.Article object at 0x7f9f84771b10>, <pelican.contents.Article object at 0x7f9f841e2590>, <pelican.contents.Article object at 0x7f9f841e2a10>, <pelican.contents.Article object at 0x7f9f84195510>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f3b21d8cfd0>,-<pelican.contents.Article-object-at-0x7f3b21d8c890>,-<pelican.contents.Article-object-at-0x7f3b21c3f0d0>,-<pelican.contents.Article-object-at-0x7f3b21d19cd0>,-<pelican.contents.Article-object-at-0x7f3b22266b10>,-<pelican.contents.Article-object-at-0x7f3b21cdcb50>,-<pelican.contents.Article-object-at-0x7f3b21cc3b90>,-<pelican.contents.Article-object-at-0x7f3b21b26a10>]).html'>
+							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f3b21d8cfd0>, <pelican.contents.Article object at 0x7f3b21d8c890>, <pelican.contents.Article object at 0x7f3b21c3f0d0>, <pelican.contents.Article object at 0x7f3b21d19cd0>, <pelican.contents.Article object at 0x7f3b22266b10>, <pelican.contents.Article object at 0x7f3b21cdcb50>, <pelican.contents.Article object at 0x7f3b21cc3b90>, <pelican.contents.Article object at 0x7f3b21b26a10>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f9f84102250>,-<pelican.contents.Article-object-at-0x7f9f840da8d0>,-<pelican.contents.Article-object-at-0x7f9f84122a50>,-<pelican.contents.Article-object-at-0x7f9f8438b1d0>,-<pelican.contents.Article-object-at-0x7f9f8422aed0>]).html'>
-							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f9f84102250>, <pelican.contents.Article object at 0x7f9f840da8d0>, <pelican.contents.Article object at 0x7f9f84122a50>, <pelican.contents.Article object at 0x7f9f8438b1d0>, <pelican.contents.Article object at 0x7f9f8422aed0>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f3b21c3f110>,-<pelican.contents.Article-object-at-0x7f3b21c7b1d0>,-<pelican.contents.Article-object-at-0x7f3b21c94f10>,-<pelican.contents.Article-object-at-0x7f3b21e801d0>,-<pelican.contents.Article-object-at-0x7f3b21cdc8d0>]).html'>
+							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f3b21c3f110>, <pelican.contents.Article object at 0x7f3b21c7b1d0>, <pelican.contents.Article object at 0x7f3b21c94f10>, <pelican.contents.Article object at 0x7f3b21e801d0>, <pelican.contents.Article object at 0x7f3b21cdc8d0>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7f9f840daf90>,-<pelican.contents.Article-object-at-0x7f9f84122b90>,-<pelican.contents.Article-object-at-0x7f9f8422aa50>,-<pelican.contents.Article-object-at-0x7f9f840aa9d0>]).html'>
-							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7f9f840daf90>, <pelican.contents.Article object at 0x7f9f84122b90>, <pelican.contents.Article object at 0x7f9f8422aa50>, <pelican.contents.Article object at 0x7f9f840aa9d0>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7f3b21ba8fd0>,-<pelican.contents.Article-object-at-0x7f3b21c3fbd0>,-<pelican.contents.Article-object-at-0x7f3b21d19c50>,-<pelican.contents.Article-object-at-0x7f3b21c7b2d0>]).html'>
+							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7f3b21ba8fd0>, <pelican.contents.Article object at 0x7f3b21c3fbd0>, <pelican.contents.Article object at 0x7f3b21d19c50>, <pelican.contents.Article object at 0x7f3b21c7b2d0>])
+						</a>
+					</li>
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Recommendations'>,-[<pelican.contents.Article-object-at-0x7f3b21d33d90>]).html'>
+							(<Category u'Recommendations'>, [<pelican.contents.Article object at 0x7f3b21d33d90>])
 						</a>
 					</li>
 				</ul>
@@ -52,6 +56,10 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>05.21.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/when-breath-becomes-air.html">Book Review: When Breath Becomes Air</a></dd>
+    <dt>05.17.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/2016-summer-books.html">11(+) Books to Read This Summer</a></dd>
     <dt>05.9.2016</dt>
     <dd><a href="http://blog.lucywyman.me/me-earl-dying-girl.html">Book Review: Me and Earl and the Dying Girl</a></dd>
     <dt>05.3.2016</dt>
@@ -60,6 +68,8 @@ ga('send', 'pageview');
     <dd><a href="http://blog.lucywyman.me/podcasts.html">Podcasts I Love</a></dd>
     <dt>04.17.2016</dt>
     <dd><a href="http://blog.lucywyman.me/brooklyn.html">Book Review: Brooklyn</a></dd>
+    <dt>04.17.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/how-not-to-be-wrong.html">Book Review: How Not To Be Wrong</a></dd>
     <dt>04.11.2016</dt>
     <dd><a href="http://blog.lucywyman.me/boy.html">If I Were A Boy</a></dd>
     <dt>04.3.2016</dt>
